--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-dom": "18.2.7",
     "@types/uniqid": "^5.3.2",
     "autoprefixer": "10.4.15",
+    "babel-eslint": "^10.1.0",
+    "es-abstract": "^1.22.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "^13.5.4",
@@ -41,6 +43,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.33.2",
     "supabase": "^1.99.5"
   }
 }
