--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slider": "^1.1.2",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/auth-helpers-react": "^0.4.2",
@@ -22,6 +24,8 @@
     "@types/uniqid": "^5.3.2",
     "autoprefixer": "10.4.15",
     "babel-eslint": "^10.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "es-abstract": "^1.22.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -37,6 +41,7 @@
     "stripe": "^13.6.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uniqid": "^5.4.0",
     "use-sound": "^4.0.1",
